--- a/chirurgia.html
+++ b/chirurgia.html
@@ -17,7 +17,8 @@
 <body>
     <header>
         <h1>Chirurgia</h1>
-        <h2>W naszej przychodni <br> spec. chirurg lek. wet. Olgierd Piotrowski <br> wykonuje zabiegi chirurgiczne,<br> by ratować zdrowie i życie zwierząt.</h2>
+        <h2>W naszej przychodni <br> lek. wet. spec. chirurg Olgierd Piotrowski <br> wykonuje zabiegi chirurgiczne,<br>
+            by ratować zdrowie i życie zwierząt.</h2>
     </header>
 
     <a href="vet.html">Powrót do strony głównej</a>
