--- a/chirurgia.html
+++ b/chirurgia.html
@@ -17,12 +17,7 @@
 <body>
     <header>
         <h1>Chirurgia</h1>
-<<<<<<< HEAD
-        <h2>W naszej przychodni <br> lek. wet. spec. chirurg Olgierd Piotrowski <br> wykonuje zabiegi chirurgiczne,<br>
-            by ratować zdrowie i życie zwierząt.</h2>
-=======
-        <h2>W naszej przychodni <br> lek. wet. spec. chirurg Olgierd Piotrowski <br> wykonuje zabiegi chirurgiczne,<br> by ratować zdrowie i życie zwierząt.</h2>
->>>>>>> ba4132ffea7e50a6832838a61b1624af3e6c9864
+        <h2>W naszej przychodni <br> spec. chirurg lek. wet. Olgierd Piotrowski <br> wykonuje zabiegi chirurgiczne,<br> by ratować zdrowie i życie zwierząt.</h2>
     </header>
 
     <a href="vet.html">Powrót do strony głównej</a>
