vet.html->index.html

--- a/chirurgia.html
+++ b/chirurgia.html
@@ -20,7 +20,7 @@
         <h2>W naszej przychodni <br> spec. chirurg lek. wet. Olgierd Piotrowski <br> wykonuje zabiegi chirurgiczne,<br> by ratować zdrowie i życie zwierząt.</h2>
     </header>
 
-    <a href="vet.html">Powrót do strony głównej</a>
+    <a href="index.html">Powrót do strony głównej</a>
 
     <footer>
         <p> &copy; Przychodnia weterynaryjna "Animal" Częstochowa, Al. P.O.W. 33 </p>
