--- a/diagnostyka.html
+++ b/diagnostyka.html
@@ -24,7 +24,7 @@
         <h3>Zapraszamy</h3>
     </header>
 
-    <a href="vet.html">Powrót do strony głównej</a>
+    <a href="index.html">Powrót do strony głównej</a>
 
     <footer>
         <p> &copy; Przychodnia weterynaryjna "Animal" Częstochowa, Al. P.O.W. 33 </p>
