--- a/kastracja.html
+++ b/kastracja.html
@@ -18,7 +18,7 @@
         <h2> Zapraszamy na zabieg kastracji kotów i psów. <br><br> Zabieg przebiega bezboleśnie dla zwierzęcia,<br> właściciel odbiera zwierzę już wybudzone po ok. 2-3 godzinach. <br><br> Zabieg kastracji zapobiega niechcianej rozrodczości oraz chorobom.</h2>
     </header>
 
-    <a href="vet.html">Powrót do strony głównej</a>
+    <a href="index.html">Powrót do strony głównej</a>
 
     <footer>
         <p> &copy; Przychodnia weterynaryjna "Animal" Częstochowa, Al. P.O.W. 33 </p>
