--- a/konsultacje.html
+++ b/konsultacje.html
@@ -17,7 +17,7 @@
         <h1>Konsultacje</h1>
 <h2>Zapraszamy na konsultacje w zakresie profilaktyki zdrowotnej,<br> zdrowego żywienia zwierząt oraz wskazanych szczepień.</h2>
     </header>
-    <a href="vet.html">Powrót do strony głównej</a>
+    <a href="index.html">Powrót do strony głównej</a>
 
     <footer>
         <p> &copy; Przychodnia weterynaryjna "Animal" Częstochowa, Al. P.O.W. 33 </p>
