--- a/onas.html
+++ b/onas.html
@@ -28,7 +28,7 @@
 
         <h4> „Nie bój się. Doktor tylko tak groźnie wygląda.”<br><br></h4>
     </header>
-    <a href="vet.html">Powrót do strony głównej</a>
+    <a href="index.html">Powrót do strony głównej</a>
 
     <footer>
         <p> &copy; Przychodnia weterynaryjna "Animal" Częstochowa, Al. P.O.W. 33 </p>
