--- a/szczepienia.html
+++ b/szczepienia.html
@@ -17,7 +17,7 @@
         <h1>Szczepienia</h1>
         <h2>Zapraszamy na profilaktyczne szczepienia psów i kotów,<br> zapobiegające najczęstszym chorobom dla danego gatunku. <br> Posiadamy w ofercie szczepionki różnych producentów w różnej cenie. </h2>
     </header>
-<a href="vet.html">Powrót do strony głównej</a>
+<a href="index.html">Powrót do strony głównej</a>
 
 <footer>
     <p> &copy; Przychodnia weterynaryjna "Animal" Częstochowa, Al. P.O.W. 33 </p>
